# claude-code-viewer

./: .env.example  .env.local.sample  .envrc  .gitignore  .oxfmtrc.json  .oxlintrc.json  .release-it.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  biome.json  docker-compose.yml  flake.nix  gatecheck.yaml  index.html  lefthook.yml  manifest  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
.claude/commands/: fix-schema.md  i18n-fix.md  refine-release-note.md
.github/ISSUE_TEMPLATE/: schema-parse-error.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  pinact.yml  release.yml  update-dependencies.yml  vrt.yml
dev/lints/: conventions.js
docs/: claude-code-tasks.md  dev.md  latency_analysis.md
docs/design/: sqlite-migration.md
docs/guidelines/: branch_naming.md  commit_message.md  definition_of_done.md
e2e/: README.md  config.ts  example.ts  testDevices.ts
e2e/captureSnapshot/: error-pages.ts  home.ts  index.ts  project-detail.ts  projects.ts  session-detail.ts
e2e/tests/: error-states.spec.ts  modal-components.spec.ts  project-detail-new.spec.ts  project-detail-page.spec.ts  projects-page-new.spec.ts  projects-page.spec.ts  (+3 more)
scripts/: build.sh  dev.sh  e2e-check.sh  e2e.sh  i18n-check-key-equals-translation.sh  lingui-sort.js  put-transtation.js  release.ts
src/: main.tsx  routeTree.gen.ts  styles.css  sw.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+642 files in other folders)
